# md-docx-converter

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  PRD.md  README.md  THIRD_PARTY_NOTICES.md  create_shortcut.py  glama.json  pyproject.toml
.claude-plugin/: marketplace.json
mcp_md_docx/: __main__.py  server.py
md_docx_converter/: converter.py  docx_to_md.py  heading_mapper.py  image_handler.py  launch.pyw  md_to_docx.py
plugins/md-docx-converter/.claude-plugin/: plugin.json
plugins/md-docx-converter/skills/convert/: SKILL.md
tests/: test_converter.py  test_docx_to_md.py  test_heading_mapper.py  test_image_handler.py  test_md_to_docx.py
tests/fixtures/: make_fixtures.py  no_title.docx  rich.docx  simple.md  simple_out.docx  tasks.md  tasks_out.docx  with_image.docx  with_title.docx
